Fixed bar chart not showing tiny numbers #551 #556

--- a/styles/search.sass
+++ b/styles/search.sass
@@ -64,6 +64,7 @@
 
             a
                 color: $black-text-color
+                word-break: break-word
 
         a
             color: $blue-text-color
